add handler class
